public/css/master.css
html, body
{
    width: 99%;
    height: 100%;
    margin: 0px auto;
    font-family: arial;
}

.menu
{
    display: table;
    border: 2px solid #000;
    padding: 2px;
    width: 100%;
    margin: 5px 0px;
    background-color: white;
    font-size: 15px;
}

.menu a
{
    color: #fff;
    display: inline-block;
    vertical-align: middle;
    margin:  10px 10px;
    text-decoration: none;
    font-weight: bold;
}

.menu a:hover
{
    color: rgb(255, 255, 0);
}

.menu p
{
    color: #fff;
    margin: auto 10px;
    vertical-align: center;
    line-height: 40px;
    height: 40px;
}
.menu p a
{
    line-height: 0px;
}

.menu input[type="submit"]
{
    color: #fff;
    background-color: #000;
    font-family: arial;

    display: inline-block;
    vertical-align: middle;

    margin:  6px 2px;
    text-decoration: none;
    font-weight: bold;

    box-shadow: none;
    font-size: 15px;
    border: none;
}

.menu-selected
{
    background:green;
}

.menu input[type="submit"]:hover
{
    color: rgb(255, 255, 0);
}

.menu label
{
    color: #fff;
    margin-left: 5px;
}

.menu input[type="text"],
.menu input[type="password"]
{
    width: 75px;
    color: #000;
    background-color: #ddd;
    margin: 7px 5px;
}

.branch-select
{
    width: 100px;
    background-color: #fff;
}

.options
{
    display: table-row;
    background-color: #000;
}

.option
{
    display: inline-block;
    height: 35px;
    vertical-align: center;
}

.option.left
{
    text-align: left;
    border-right: 2px solid #fff;
}

.option.right
{
    float: right;
    color: white;
    text-align: right;
    border-left: 2px solid #fff;
    padding-left: 20px;
}

.content
{
    width: 100%;
    height: 80%;
    margin: 0px auto;
    overflow-y: scroll;
    padding: 2px 2px;
    padding-right: 1px;
    border: 2px solid #000;
}

.content::-webkit-scrollbar {
    width: 0.7em;
}

.content::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

.content::-webkit-scrollbar-thumb {
    background-color: black;
    border: 1px solid slategrey;
    border-radius: 5px;
}
.logs-table-area
{
    width:100%;
    padding: 5px 10px;
    vertical-align: top;
}
.logs-table-area h2
{
    text-align: center;
}
table.log-table
{
    width:100%;
    background: #AAAAAA;
    /*position: fixed;*/
    /*display: inline-block*/
}
table.log-table tbody
{
}

tr.log-table-row
{
    height: 15px;
    display: table-row;
}
tr.log-table-row:nth-child(2n-1)
{
    background: #CCCCCC;
}
tr.log-table-row:nth-child(2n-2)
{
    background: #FFFFFF;
}

th.log-table-date
{
    background: rgb(252, 252, 151);
    width:20%;
}
td.log-table-date
{
}
th.log-table-type
{
    background: rgb(252, 252, 151);
    width:16%;
}
td.log-table-type
{
}

th.log-table-user
{
    background: rgb(252, 252, 151);
    width:15%;
}
td.log-table-user
{
}
th.log-table-message
{
    background: rgb(252, 252, 151);
    width:49%;
}
td.log-table-message
{
    width:35%;
    display: table-cell;
}

div.log-filter
{
    border: 2px solid black;
    width: 99%;
    display: flex;
    margin: 10px;
}
p.log-filter
{
    width: 19%;
    display: inline-flex;
    margin: 0;
    vertical-align: middle;
}
input.log-filter
{
    /*margin: 10px;*/
}
.log-filter-group
{
    width: 91%;
}
.log-filter-refresh-btn
{
    height: 100%;
    width:100%;
}
.small-buttons
{
    font-size: 0.8em !important;
}
.tiny-buttons
{
    font-size: 0.6em !important;
}
.filter-btn-box
{
    float: right;

}
.home-title
{
    border: 2px solid #000;
    padding: 2px;
    width: 100%;
    margin: 5px 0px;
    background-color: black;
    font-size: 20px;
    color: white;
}
.kit-block
{
    margin-top: 5px;
    /* line-height: 20%; */
    border: 5px solid black;
    padding-left: 10px;
    font-size: 20px;
    width: 513px;
    min-width: 30% !important;
    /* height:15%; */
    display: inline-flex;
    cursor: pointer;
    overflow: auto;
}
p.sign-in
{
    min-height: 64px;
    min-width: 64px;
    background-image: url("images/login.png");
    background-repeat: no-repeat;
    background-size: contain;
}
p.sign-out
{
    min-height: 64px;
    min-width: 64px;
    background-image: url("images/logout.png");
    background-size: contain;
    background-repeat: no-repeat;
}
p.on-self
{
    height: 64px;
    width: 64px;
    background-image: url("images/on-shelf.png");
    background-size: contain;
    background-repeat: no-repeat;
}
.kit-block.pending
{
    width: 96%;
}
div.kit-block table
{
    padding-left: 10px;

    width: 59%;
}
.kit-block.inventory
{
}
.kit-block.storage
{
    /* width: 50%; */
    margin-right: 6px;
    background-color: gainsboro;
    max-width: 45%;
}
div.kit-block-activity
{
    float: right;

    width: 28%;
    right: -6px;
    position: relative;
    text-align: center;
    vertical-align: middle;
}
.kit-block.kit-shipping
{
    background-color: lightgreen;
}
.kit-block.kit-receiving
{
    background-color: lightblue;
}

.kit-block-icon
{

}

.kit-block-name
{

}
.kit-block-contents
{

}
.kit-block-state
{

}
table.tooltip-branch
{
    width: 100%;
}
table.tooltip-branch tr:nth-child(even)
{
    background: lightgrey;
}
.tooltip-branch td.tooltip-header
{
    text-align: right;
    padding-right: 10px;
}
.tooltip-branch td.tooltip-value
{

}
.right-seperator
{
    border-right: 2px solid black;
    min-width: 30%;
}
.click-select-logs-msg
{
    left: 30%;
    padding-top: 15%;
    position: relative;
}


.kit-table-area
{
    width: 50%;
    height:100%;
}
.kit-components-area
{
    width: 50%;
    height:100%;
    border: 2px solid black;

}
.kit-detail-form
{
    padding: 20px;
    height: 100%;
    width: 95%;
}
.kit-detail-form td label
{
    float: right;
    padding-right: 5px;
}
.kit-detail-form tr
{
    vertical-align: center;
    /* height: 13px !important; */

}
.kit-detail-form tr td
{
    /* padding-top: 5px; */
}
.form-singleline-text
{
    width: 100%;
}
.form-multiline-text
{
    width: 100%;
}
.form-checkbox-text
{
    width: 90%;
}
.form-select
{
    width: 100%;
}
.form-checkbox
{

}
.form-apply
{
    /* float: left; */
}
.form-input-changed
{
    border: 1px solid black;
    background: rgba(0, 255, 0, 0.28);
}
.destroy-kit
{
    color: black !important;
    background: red !important;
    float: right;
}
.welcomeMessage
{
    text-align: center;
    line-height: 400px;
    vertical-align: middle;
}


.kit-content-form
{

}
.kit-content-row
{

}
.kit-content-row.green
{
    background: green;
}
.kit-content-form-name
{

}
.kit-content-form-serial-number
{

}
.kit-content-form-damaged
{

}
.kit-content-form-missing
{

}
td.kit-content-form-name
{
    width: 50%;
    align-content: center;
    vertical-align: middle;
    padding: 3px;
    margin: 3px;
}
td.kit-content-form-serial-number
{
    width: 30%;
    align-content: center;
    vertical-align: middle;
    padding: 3px;
    margin: 3px;

}
td.kit-content-form-damaged
{
    width: 10%;
    align-content: center;
    vertical-align: middle;
    padding: 3px;
    margin: 3px;
    padding-left: 4%;
}
td.kit-content-form-missing
{
    width: 10%;
    align-content: center;
    vertical-align: middle;
    padding: 3px;
    margin: 3px;
    padding-left: 4%;
}
td.kit-content-form-remove
{
    width: 1%;
}
.checkbox
{
}
.text-singleline
{
    width:99%;
}
/*This is the css for the kit type management*/
.kit-type-name
{
    list-style: none;

    -webkit-margin-start: -2em;
    -webkit-margin-before: 0em;
    cursor: default;
}

.kit-type-name.selected
{
    background: #CCCCCC;
}
label.kit-type
{
    /* width:25%; */
    float: right;
}
input.kit-type
{

}
textarea.kit-type
{


}
td.form-label
{
    width: 10%;

}
td.form-value
{
    /* width: 89%; */

}
.kit-type-destroy
{
    float: right;
    background: red !important;
    color: black !important;
}
.kit-type-buttons
{
    border: none !important;
}

#kit-type-edit
{
    margin-left: 14px;
    height: 100%;
    width: 98%;
}

.kit-type-kit-stat
{
    color: #cccccc;
}

.pagination{
margin:10px 0 ;
padding:10px 0 10px 0px;
}

.pagination ul{
margin: 0;
padding: 0;
text-align: center;
}

.pagination li{
display: inline;
padding: 2px 5px;
text-align: left;
margin: 0 2px;
background: none;
}

.receive-table-area
{
    width:100%;
    padding: 5px 10px;
    vertical-align: top;
}

table.receive-table
{
    width:100%;
    background: #AAAAAA;
    /*position: fixed;*/
    /*display: inline-block*/
}

tr.receive-table-row
{
    height: 15px;
    display: table-row;
}

tr.receive-table-row:nth-child(2n-1)
{
    background: #CCCCCC;
}

tr.receive-table-row:nth-child(2n-2)
{
    background: #FFFFFF;
}
.users-list
{

}
.users-list tr
{
    cursor: pointer;

}
.users-list tr:nth-child(2n+1)
{
    background: aliceblue;
}
.users-list tr:hover
{
    background-color: navy;
    color: white;
}
.users-list th
{
    background: bisque;
    text-align: center;
}
.users-list td
{
}

th.users-list-id
{
    width: 2%;
    background: bisque;
    text-align: center;
}
th.users-list-username
{
    width: 10%;
    background: bisque;
    text-align: center;
}
th.users-list-realname
{
    width: 10%;
    background: bisque;
    text-align: center;
}
th.users-list-email
{
    width: 10%;
    background: bisque;
    text-align: center;
}
th.users-list-homebranch
{
    width: 10%;
    background: bisque;
    text-align: center;
}
th.users-list-isadmin
{
    width: 2%;
}

td.users-list-id
{
    text-align: center;
}

td.users-list-username
{
}
td.users-list-realname
{
}
td.users-list-email
{
}
td.users-list-homebranch
{
}
td.users-list-isadmin
{
    text-align: center;
}


table.kit-status
{
    width: 100%;

}
tr.kit-status
{
    /* width: 100%; */

}
tr.kit-status:nth-child(2n+1) td
{
    background: aliceblue;
}
th.kit-status
{
    background: bisque;
    text-align: center;
}
td.kit-status
{

}
.kit-status.kit-type
{
    width: 20%;

}
.kit-status.kit-name
{
    width: 25%;

}
.kit-status.branch-id
{
    width: 8%;

    text-align: center;
}
.kit-status.kit-state
{
    width: 10%;

    text-align: center;
}
.kit-status.start-date
{
    width: 15%;

    text-align: center;
}
.kit-status.branch-name
{
    width: 10%;

    text-align: center;
}
.kit-status.booking-count
{
    text-align: center;

}
.boo {
  position: relative;
  width: 20em;
  /* min-height: 10em; */
  background: rgba(0,0,0,0) url("images/login.png");
  transition: background-color 1s;
  background-repeat: no-repeat;
  height: 64px;
  width: 64px;
  background-size: contain;
}
.boo:hover
{
  /*background-color: rgba(0,0,0,.5);*/
    background-repeat: no-repeat;
    background: rgba(0,0,0,0.5) url("images/login.png");
    height: 64px;
    width: 64px;
    background-size: contain;
}
.boo:before {
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  background-color: inherit;
  content: ' ';
  background-repeat: no-repeat;
  /* background: rgba(0,0,0,0) url("images/logout.png"); */
  background-size: contain;
}

td.pending
{
    width: 30%;

    vertical-align: top;
    /* border-left: 2px solid blue; */
    /* border-right: 2px solid black; */
}
td.inventory
{
    height: 100%;

    vertical-align: top;
}

